src/test/ui/feature-gate/issue-43106-gating-of-test.stderr
warning: attribute must be of the form `#[test]`
  --> $DIR/issue-43106-gating-of-test.rs:10:1
   |
LL | #![test                    = "4200"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(ill_formed_attribute_input)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #57571 <https://github.com/rust-lang/rust/issues/57571>

error[E0601]: `main` function not found in crate `issue_43106_gating_of_test`
   |
   = note: consider adding a `main` function to `$DIR/issue-43106-gating-of-test.rs`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0601`.
